--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,13 @@
         "es6": true
     },
     "extends": [
+        "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
-        "airbnb"
+        "airbnb",
+        "airbnb-typescript",
+        "prettier",
+        "prettier/react",
+        "prettier/@typescript-eslint"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -17,12 +22,16 @@
             "jsx": true
         },
         "ecmaVersion": 2018,
-        "sourceType": "module"
+        "sourceType": "module",
+        "project":"./tsconfig.json"
     },
     "plugins": [
+        "prettier",
         "react",
         "@typescript-eslint"
     ],
     "rules": {
+        "prettier/prettier":"error",
+        "@typescript-eslint/explicit-module-boundary-types": "off"
     }
 }
