--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "prettier/prettier":"error",
+        "prettier/prettier":["error", {"endOfLine":"auto"}],
         "@typescript-eslint/explicit-module-boundary-types": "off"
     }
 }
